--- a/package.json
+++ b/package.json
@@ -14,5 +14,14 @@
     "discord.js": "^14.10.2",
     "parse-ms": "2.1",
     "quick.db": "^7.1.3"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AnyBananaGAME/LunarPrisonsBot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AnyBananaGAME/LunarPrisonsBot/issues"
+  },
+  "homepage": "https://github.com/AnyBananaGAME/LunarPrisonsBot#readme"
 }
