--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "author": "[]",
   "license": "ISC",
   "dependencies": {
+    "better-sqlite3": "^8.3.0",
     "canvas": "^2.11.0",
     "chalk": "^4.1.2",
     "discord.js": "^14.10.2",
+    "mysql2": "^3.2.4",
     "parse-ms": "2.1",
-    "quick.db": "^7.1.3"
+    "quick.db": "^9.1.6"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AnyBananaGAME/LunarPrisonsBot.git",
