--- a/src/Utils/config.json
+++ b/src/Utils/config.json
@@ -5,7 +5,7 @@
     "clientId": "1103690858777292872",
 
 
-    "votelink": "<vote link>",
-    "ip": "To be announced!",
+    "votelink": "https://bit.ly/41YZaHs",
+    "ip": "lunarprisons.xyz",
     "storelink": "https://lunar-prisons.tebex.io/"
 }
