--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "better-sqlite3": "^8.3.0",
     "canvas": "^2.11.0",
     "chalk": "^4.1.2",
+    "discord-html-transcripts": "^3.1.4",
     "discord.js": "^14.10.2",
     "mysql2": "^3.2.4",
     "parse-ms": "2.1",
